--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "4  blue collar  health service  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "Name: age, Length: 4475, dtype: int64"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
        "4  blue collar  health service   29  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,33 +422,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0                 hoa khe quan thanh khe\n",
-       "1                               man thai\n",
-       "2                      que son quang nam\n",
-       "3                           truong chinh\n",
-       "4                                 cẩm lệ\n",
-       "                      ...               \n",
-       "4474    A, THUAN PHUOC,HAI CHAU, DA NANG\n",
-       "4475                        Phước Mỹ, ĐN\n",
-       "4476                   nguyen gian thanh\n",
-       "4477                        ngũ hành sơn\n",
-       "4478           Thanh Khê Tây - Thanh Khê\n",
-       "Name: address, Length: 4475, dtype: object"
+       "customerid       0\n",
+       "DOB              0\n",
+       "gender           0\n",
+       "address          1\n",
+       "Website        535\n",
+       "job              0\n",
+       "industry      1118\n",
+       "age              0\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "customer.address"
+    "customer.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rows_to_drop = customer[customer['address'].isnull()].index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customer.drop(rows_to_drop, axis=0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "customerid       0\n",
+       "DOB              0\n",
+       "gender           0\n",
+       "address          0\n",
+       "Website        535\n",
+       "job              0\n",
+       "industry      1118\n",
+       "age              0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "customer.isnull().sum()"
    ]
   },
   {
