--- a/customer_clean.ipynb
+++ b/customer_clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "4  blue collar  health service  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "Name: age, Length: 4475, dtype: int64"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
        "4  blue collar  health service   29  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -407,11 +407,11 @@
        "Website       3940\n",
        "job              5\n",
        "industry         9\n",
-       "age             49\n",
+       "age             50\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,33 +422,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customer['gender'] = customer['gender'].astype('category')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0                 hoa khe quan thanh khe\n",
-       "1                               man thai\n",
-       "2                      que son quang nam\n",
-       "3                           truong chinh\n",
-       "4                                 cẩm lệ\n",
-       "                      ...               \n",
-       "4474    A, THUAN PHUOC,HAI CHAU, DA NANG\n",
-       "4475                        Phước Mỹ, ĐN\n",
-       "4476                   nguyen gian thanh\n",
-       "4477                        ngũ hành sơn\n",
-       "4478           Thanh Khê Tây - Thanh Khê\n",
-       "Name: address, Length: 4475, dtype: object"
+       "address\n",
+       "hải châu                     312\n",
+       "ngũ hành sơn                 294\n",
+       "hòa khánh                    270\n",
+       "liên chiểu                   263\n",
+       "sơn trà                      252\n",
+       "                            ... \n",
+       "vũ quỳnh                       1\n",
+       "Pleiku, Gia Lai                1\n",
+       "Phan Boi                       1\n",
+       " THÁI THỊ BÔI ĐÀ NẴNG          1\n",
+       "Thanh Khê Tây - Thanh Khê      1\n",
+       "Name: count, Length: 1260, dtype: int64"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "customer.address"
+    "customer['address'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "customerid       0\n",
+       "DOB              0\n",
+       "gender           0\n",
+       "address          1\n",
+       "Website        535\n",
+       "job              0\n",
+       "industry      1118\n",
+       "age              0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "customer.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "null_address_rows = customer[customer['address'].isnull()].index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customer.drop(null_address_rows, axis=0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from unidecode import unidecode\n",
+    "\n",
+    "customer['address'] = customer['address'].apply(lambda x: unidecode(x.lower().strip()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['man thai', 'truong chinh', 'cam le', 'tam thuan', 'cam le,dn',\n",
+       "       'le duan', 'thuan phuoc', 'lien chieu', 'hoa vang', 'ton dan',\n",
+       "       'thanh son', 'hoa minh', 'son tra', 'thanh khe', 'hai chau',\n",
+       "       'hung vuong', 'hoa khanh', 'dong da', 'me nhu', 'nguyen chanh',\n",
+       "       'van cao', 'phan thanh', 'lang ha', 'to hieu', 'hia phong',\n",
+       "       'yen khe', 'khu dong', 'dong ki', 'quang tri', 'le thiet',\n",
+       "       'hoaf vang', 'khue trung', 'hoang dieu', 'le do', 'quang nam',\n",
+       "       'bui vien', 'que son', 'nguyen trai', 'dao tan', 'ly trieu',\n",
+       "       'tran phu', 'ham nghi', 'ngoc han', 'bac dau', 'tan thai',\n",
+       "       'hai phong', 'thanh thuy', 'man quang', 'huynh ly', 'hai son',\n",
+       "       'do quang', 'thanh long', 'ky dong', 'co giang', 'duy tan',\n",
+       "       'ngo quyen', 'thanh duyen', 'thuc te', 'quang trung', 'hoi an',\n",
+       "       'quang ngai', 'hoa chau', 'yen bay', 'an don', 'thanh hai',\n",
+       "       'nguyen nghiem', 'hoa lien', 'hoa phat', 'dak lak', 'binh dinh',\n",
+       "       'van don', 'hoa son', 'thoi huu', 'truong son', 'nui thanh',\n",
+       "       'cao thang', 'tam ky', 'nguyen dang', 'mai an', 'nguyen hoang',\n",
+       "       'pasraur, dn', 'the lu', 'thai phien', 'nguyen du', 'le loi',\n",
+       "       'ha son', 'vu quynh', 'phan boi', 'hao vang', 'quang rnam',\n",
+       "       'quang binh', 'chinh gian', 'tam ki', 'le co', '- blo', 'caam le',\n",
+       "       'phu yen', 'ba dinh', 'hoaf khanhf', 'dai loc', 'mai am',\n",
+       "       'khuc hao', 'q.lien chieu', 'thanh  khe', 'ha tinh', 'thac gian',\n",
+       "       'quang  nam', 'le lai', 'hai duong', 'quang nma', 'duy xuyen',\n",
+       "       'hoa an', 'hoa tien', 'cam leh', 'truong dinh', 'nam cao',\n",
+       "       'vu huu', 'thnah khe', 'hoa vnag', 'quangr nam', 'quang nam,',\n",
+       "       'nguyen trac', 'hair chaau', 'ha noi', 'khanh hoa', 'son trag',\n",
+       "       'son trta', 'thang binh', 'lieenc hieu', 'lang son', 'cach mang',\n",
+       "       'thanh khee', 'kon tum', 'do nhuan', 'nguyen hien', 'au co',\n",
+       "       'nghe an', 'kien giang', 'gia lai', 'nguyen bieu', 'thi sach',\n",
+       "       'tieu la', 'hoa phong', 'an khe', 'khuc ha', 'bac son',\n",
+       "       'bac giang', 'hoa thanh', 'quangc ngai', 'han thuyen',\n",
+       "       'thanh vinh', 'ly trien', 'haf tinh', 'truong trinh', 'man thienh',\n",
+       "       'cam le-dn'], dtype=object)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "customer[customer['address'].apply(lambda x: len(x.split())==2)]['address'].unique()"
    ]
   },
   {
