Totally cleaned address

--- a/ticket_EDA.ipynb
+++ b/ticket_EDA.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd \n",
-    "import numpy as np "
+    "import numpy as np \n",
+    "import matplotlib.pyplot as plt \n",
+    "import seaborn as sns "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +182,7 @@
        "4       ĐƠN  Thành viên         45000   Không  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -270,23 +272,23 @@
        "    <tr>\n",
        "      <th>count</th>\n",
        "      <td>35378</td>\n",
+       "      <td>35474</td>\n",
        "      <td>35378</td>\n",
-       "      <td>35378</td>\n",
-       "      <td>35378</td>\n",
-       "      <td>35378</td>\n",
-       "      <td>35378</td>\n",
-       "      <td>35378</td>\n",
-       "      <td>35378</td>\n",
-       "      <td>35378</td>\n",
-       "      <td>35378</td>\n",
+       "      <td>35474</td>\n",
+       "      <td>35474</td>\n",
+       "      <td>35474</td>\n",
+       "      <td>35474</td>\n",
+       "      <td>35474</td>\n",
+       "      <td>35474</td>\n",
+       "      <td>35474</td>\n",
        "      <td>35378</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>unique</th>\n",
        "      <td>14598</td>\n",
-       "      <td>15</td>\n",
+       "      <td>16</td>\n",
        "      <td>30</td>\n",
-       "      <td>4451</td>\n",
+       "      <td>4479</td>\n",
        "      <td>30</td>\n",
        "      <td>159</td>\n",
        "      <td>190</td>\n",
@@ -316,11 +318,11 @@
        "      <td>2094</td>\n",
        "      <td>10132</td>\n",
        "      <td>2094</td>\n",
-       "      <td>1567</td>\n",
-       "      <td>592</td>\n",
-       "      <td>9628</td>\n",
-       "      <td>33972</td>\n",
-       "      <td>35378</td>\n",
+       "      <td>1583</td>\n",
+       "      <td>597</td>\n",
+       "      <td>9630</td>\n",
+       "      <td>34063</td>\n",
+       "      <td>35474</td>\n",
        "      <td>35287</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -329,19 +331,19 @@
       ],
       "text/plain": [
        "                 orderid cashier   saledate customerid       date   time  \\\n",
-       "count              35378   35378      35378      35378      35378  35378   \n",
-       "unique             14598      15         30       4451         30    159   \n",
+       "count              35378   35474      35378      35474      35474  35474   \n",
+       "unique             14598      16         30       4479         30    159   \n",
        "top     10026052019B0285  emp011  5/11/2019  KH6166700  5/11/2019  19:15   \n",
-       "freq                  43    5894       2094      10132       2094   1567   \n",
+       "freq                  43    5894       2094      10132       2094   1583   \n",
        "\n",
        "         slot                              film slot type ticket type popcorn  \n",
-       "count   35378                             35378     35378       35378   35378  \n",
+       "count   35474                             35474     35474       35474   35378  \n",
        "unique    190                                19         2           1       2  \n",
        "top       G09  MẸ MA THAN KHÓC LA LLORONA (C18)       ĐƠN  Thành viên   Không  \n",
-       "freq      592                              9628     33972       35378   35287  "
+       "freq      597                              9630     34063       35474   35287  "
       ]
      },
-     "execution_count": 119,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +378,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +398,7 @@
        "(35474, 15)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +429,7 @@
        "(35378, 15)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +463,7 @@
        "Name: count, Length: 4451, dtype: int64"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +551,7 @@
        "7327  Thành viên             0      Có  "
       ]
      },
-     "execution_count": 150,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +606,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +680,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1965,7 +1967,7 @@
        "34552  Thành viên         45000      Có  "
       ]
      },
-     "execution_count": 146,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1976,7 +1978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1985,7 +1987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -2006,7 +2008,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2017,7 +2019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -2048,7 +2050,7 @@
        "       '12:14', '21:05', '8:44', '23:15', '19:10'], dtype=object)"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
