ticket EDA update

--- a/data_cleaning/ticket_clean.ipynb
+++ b/data_cleaning/ticket_clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "4       ĐƠN  Thành viên         45000   Không  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "4       ĐƠN  Thành viên         45000   Không   F     4  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,18 +476,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "ticket['saledate'] = pd.to_datetime(ticket['saledate'], format='%m/%d/%Y')\n",
+    "ticket['day_of_week'] = pd.to_datetime(ticket['saledate'], format='%m/%d/%Y').dt.day_name()\n",
     "ticket['date'] = pd.to_datetime(ticket['date'], format='%m/%d/%Y')\n",
-    "ticket['time'] = pd.to_datetime(ticket['time'], format='%H:%M').dt.time"
+    "ticket['time'] = pd.to_datetime(ticket['time'], format='%H:%M').dt.time\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -538,6 +539,7 @@
        "      <th>row</th>\n",
        "      <th>seat</th>\n",
        "      <th>hour</th>\n",
+       "      <th>day_of_week</th>\n",
        "      <th>purchased in advance</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -562,6 +564,7 @@
        "      <td>G</td>\n",
        "      <td>4</td>\n",
        "      <td>18</td>\n",
+       "      <td>Monday</td>\n",
        "      <td>0 days</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -584,6 +587,7 @@
        "      <td>G</td>\n",
        "      <td>3</td>\n",
        "      <td>18</td>\n",
+       "      <td>Monday</td>\n",
        "      <td>0 days</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -606,6 +610,7 @@
        "      <td>E</td>\n",
        "      <td>4</td>\n",
        "      <td>20</td>\n",
+       "      <td>Wednesday</td>\n",
        "      <td>0 days</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -628,6 +633,7 @@
        "      <td>E</td>\n",
        "      <td>3</td>\n",
        "      <td>20</td>\n",
+       "      <td>Wednesday</td>\n",
        "      <td>0 days</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -650,6 +656,7 @@
        "      <td>F</td>\n",
        "      <td>4</td>\n",
        "      <td>19</td>\n",
+       "      <td>Thursday</td>\n",
        "      <td>0 days</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -671,12 +678,12 @@
        "3 2019-05-22  20:45:00  E03     2  JOHN WICK 3: CHUẨN BỊ CHIẾN TRANH (C18)   \n",
        "4 2019-05-30  19:30:00  F04     1                   NGÔI ĐỀN KỲ QUÁI (C18)   \n",
        "\n",
-       "  slot type ticket type  ticket price popcorn row  seat hour  \\\n",
-       "0       ĐƠN  Thành viên         45000   Không   G     4   18   \n",
-       "1       ĐƠN  Thành viên         45000   Không   G     3   18   \n",
-       "2       ĐƠN  Thành viên         45000   Không   E     4   20   \n",
-       "3       ĐƠN  Thành viên         45000   Không   E     3   20   \n",
-       "4       ĐƠN  Thành viên         45000   Không   F     4   19   \n",
+       "  slot type ticket type  ticket price popcorn row  seat hour day_of_week  \\\n",
+       "0       ĐƠN  Thành viên         45000   Không   G     4   18      Monday   \n",
+       "1       ĐƠN  Thành viên         45000   Không   G     3   18      Monday   \n",
+       "2       ĐƠN  Thành viên         45000   Không   E     4   20   Wednesday   \n",
+       "3       ĐƠN  Thành viên         45000   Không   E     3   20   Wednesday   \n",
+       "4       ĐƠN  Thành viên         45000   Không   F     4   19    Thursday   \n",
        "\n",
        "  purchased in advance  \n",
        "0               0 days  \n",
@@ -686,7 +693,7 @@
        "4               0 days  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -752,6 +759,7 @@
        "      <th>row</th>\n",
        "      <th>seat</th>\n",
        "      <th>hour</th>\n",
+       "      <th>day_of_week</th>\n",
        "      <th>purchased in advance</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -776,6 +784,7 @@
        "      <td>G</td>\n",
        "      <td>4</td>\n",
        "      <td>18</td>\n",
+       "      <td>Monday</td>\n",
        "      <td>0 days</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -798,6 +807,7 @@
        "      <td>G</td>\n",
        "      <td>3</td>\n",
        "      <td>18</td>\n",
+       "      <td>Monday</td>\n",
        "      <td>0 days</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -820,6 +830,7 @@
        "      <td>E</td>\n",
        "      <td>4</td>\n",
        "      <td>20</td>\n",
+       "      <td>Wednesday</td>\n",
        "      <td>0 days</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -842,6 +853,7 @@
        "      <td>E</td>\n",
        "      <td>3</td>\n",
        "      <td>20</td>\n",
+       "      <td>Wednesday</td>\n",
        "      <td>0 days</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -864,10 +876,12 @@
        "      <td>F</td>\n",
        "      <td>4</td>\n",
        "      <td>19</td>\n",
+       "      <td>Thursday</td>\n",
        "      <td>0 days</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -908,6 +922,7 @@
        "      <td>B</td>\n",
        "      <td>10</td>\n",
        "      <td>21</td>\n",
+       "      <td>Thursday</td>\n",
        "      <td>0 days</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -930,6 +945,7 @@
        "      <td>B</td>\n",
        "      <td>9</td>\n",
        "      <td>21</td>\n",
+       "      <td>Thursday</td>\n",
        "      <td>0 days</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -952,6 +968,7 @@
        "      <td>B</td>\n",
        "      <td>7</td>\n",
        "      <td>21</td>\n",
+       "      <td>Thursday</td>\n",
        "      <td>0 days</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -974,6 +991,7 @@
        "      <td>C</td>\n",
        "      <td>14</td>\n",
        "      <td>19</td>\n",
+       "      <td>Wednesday</td>\n",
        "      <td>0 days</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -996,11 +1014,12 @@
        "      <td>C</td>\n",
        "      <td>13</td>\n",
        "      <td>19</td>\n",
+       "      <td>Wednesday</td>\n",
        "      <td>0 days</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>35378 rows × 19 columns</p>\n",
+       "<p>35378 rows × 20 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1043,23 +1062,23 @@
        "35472                        AVENGERS: HỒI KẾT       ĐƠN  Thành viên   \n",
        "35473                        AVENGERS: HỒI KẾT       ĐƠN  Thành viên   \n",
        "\n",
-       "       ticket price popcorn row seat hour purchased in advance  \n",
-       "0             45000   Không   G    4   18               0 days  \n",
-       "1             45000   Không   G    3   18               0 days  \n",
-       "2             45000   Không   E    4   20               0 days  \n",
-       "3             45000   Không   E    3   20               0 days  \n",
-       "4             45000   Không   F    4   19               0 days  \n",
-       "...             ...     ...  ..  ...  ...                  ...  \n",
-       "35469         45000   Không   B   10   21               0 days  \n",
-       "35470         45000   Không   B    9   21               0 days  \n",
-       "35471         45000   Không   B    7   21               0 days  \n",
-       "35472         45000   Không   C   14   19               0 days  \n",
-       "35473         45000   Không   C   13   19               0 days  \n",
+       "       ticket price popcorn row seat hour day_of_week purchased in advance  \n",
+       "0             45000   Không   G    4   18      Monday               0 days  \n",
+       "1             45000   Không   G    3   18      Monday               0 days  \n",
+       "2             45000   Không   E    4   20   Wednesday               0 days  \n",
+       "3             45000   Không   E    3   20   Wednesday               0 days  \n",
+       "4             45000   Không   F    4   19    Thursday               0 days  \n",
+       "...             ...     ...  ..  ...  ...         ...                  ...  \n",
+       "35469         45000   Không   B   10   21    Thursday               0 days  \n",
+       "35470         45000   Không   B    9   21    Thursday               0 days  \n",
+       "35471         45000   Không   B    7   21    Thursday               0 days  \n",
+       "35472         45000   Không   C   14   19   Wednesday               0 days  \n",
+       "35473         45000   Không   C   13   19   Wednesday               0 days  \n",
        "\n",
-       "[35378 rows x 19 columns]"
+       "[35378 rows x 20 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1070,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1079,7 +1098,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 35378 entries, 0 to 35473\n",
-      "Data columns (total 19 columns):\n",
+      "Data columns (total 20 columns):\n",
       " #   Column                Non-Null Count  Dtype          \n",
       "---  ------                --------------  -----          \n",
       " 0   orderid               35378 non-null  object         \n",
@@ -1100,9 +1119,10 @@
       " 15  row                   35378 non-null  category       \n",
       " 16  seat                  35378 non-null  category       \n",
       " 17  hour                  35378 non-null  category       \n",
-      " 18  purchased in advance  35378 non-null  timedelta64[ns]\n",
-      "dtypes: category(9), datetime64[ns](2), int32(1), int64(2), object(4), timedelta64[ns](1)\n",
-      "memory usage: 3.2+ MB\n"
+      " 18  day_of_week           35378 non-null  object         \n",
+      " 19  purchased in advance  35378 non-null  timedelta64[ns]\n",
+      "dtypes: category(9), datetime64[ns](2), int32(1), int64(2), object(5), timedelta64[ns](1)\n",
+      "memory usage: 3.4+ MB\n"
      ]
     }
    ],
@@ -1112,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
